--- a/system/system-programming/the-linux-programming-interface/Ch13.md
+++ b/system/system-programming/the-linux-programming-interface/Ch13.md
@@ -1,11 +1,15 @@
 #### Ch13: File I/O Buffering
 
-> 1. kernel buffer cache and libc buffer
+> 1. conception: kernel buffer cache and libc buffer
 > 2. library functions (setvbuf/setbuf/setbuffer/setlinebuf) used to modify the
      buffering mode of stream buffer (libc buffer)
 > 3. library function to flush the buffer (flush(3))
-> 4. syscalls for controlling kernel buffer
-> 5. direct I/O, which is useful in database storage engine.
+> 4. conception: synchronized I/O data integrity and file integrity
+> 5. syscalls for controlling kernel buffer (fsync/fdatasync/sync/syncfs)
+> 6. direct I/O (raw I/O)
+>    * how to enable it
+>    * how to test if your system supports it
+>    * alignment restrictions.
 
 1. kernel `buffer cache`
    
@@ -46,8 +50,9 @@
    to the kernel `buffer cache`. (No disk output performed when `write(2)` returns
    **NOT SYNCHRONOUS**)
 
-   But if we use `O_SYNC` flag, then `write(2)` will return only when the data is
-   writen to the disk.
+   But if we use `O_SYNC` flag, then `write(2)` will return only when the data 
+   (and metadata) is writen to the disk. (reaches synchronized I/O file integrity 
+   completion) 
 
    > [Ch4 Note 5 flag arguments of open(2)](https://github.com/SteveLauC/Notes/blob/main/system/system-programming/the-linux-programming-interface/Ch4.md)
 
@@ -224,4 +229,182 @@
    In many ligc implementation (including glibc), stdout will be flushed when 
    we read from stdin. Rust std does not follow this.
 
-6. 
+6. synchronized I/O completion
+
+   SUSv3 defines the term `synchronized I/O completion` to mean an I/O operation
+   that has either been successfully transferred to disk or diagnosed as 
+   unsuccessful.
+
+   SUSv3 also defines two different kinds of `synchronized I/O completion`:
+
+   1. synchronized I/O data integrity completion:
+
+      * For a read operation: this means the requested data has been transferred
+        from the disk to the process. If a pending write operation will affect
+        the requested data, it is performed before the read operation according
+        to the requirements of `synchronized I/O *data* integrity completion`.
+
+      * For a write operation: this means the data has been transferred to the 
+        disk, and all the metadata required in the next retrieval has also been
+        transferred to the disk. The key point here is only the **required** metadata
+        will be transferred, not all the metadata.
+
+   2. synchronized I/O file integrity completion:
+      * For a read op: this means the requested data has been transferred
+        from the disk to the process. If a pending write operation will affect
+        the requested data, it is performed before the read operation according
+        to the requirements of `synchronized I/O *file* integrity completion`.
+
+      * For a write op: this means the data has been transferred. And **ALL** the
+        metadata has also been transferred.
+
+   > `synchronized I/O file integrity completion` is the superset of `synchronized
+   > I/O data integrity`. And the **only difference** between them is whether **ALL**
+   > metadata will be written to the disk in a write operation.
+
+
+7. syscalls for controlling kernel `buffer cache`
+   
+   1. fsync(2)
+
+      ```c
+      #include <unistd.h>
+
+      int fsync(int fd);
+      ```
+
+      Writes all data and metadata associated with `fd` to the disk, returns
+      when the transferation is done.
+
+      > Reaches `synchronized I/O file integrity completion`
+
+   2. fdatasync(2)
+      
+      ```c
+      #include <unistd.h>
+
+      int fdatasync(int fd);
+      ```
+
+      Weirtes all data and requested metadata to the disk
+
+      > Reaches `synchronized I/O data integrity completion`
+
+      If you don't need all the metadata to be flushed, use `fdatasync(2)` over
+      the `fsync(2)` to reduce the number of disk operation.
+
+   3. sync(2)
+      
+      ```c
+      #include <unistd.h>
+
+      void sync(void);
+      ```
+
+      Writes **all kernel buffer cache containing updated file information** to the
+      disk. Returns only after all data has been transferred to the disk (or its 
+      cache) (This is the behavior on Linux). SUSv3 does not request this.
+
+   4. syncfs(2) (Linux-specific)
+      
+      ```c
+      #include <unistd.h>
+
+      int syncfs(int fd);
+      ```
+
+      Like `sync(2)`, but just write kernel buffer cache related to file specified 
+      by `fd` to the disk.
+
+      > What is the difference between `fsync(2)` and `syncfs(2)`?
+      > 
+      > Fist, `fsync(2)` is a POSIX syscall, `syncfs(2)` is exclusive to Linux.
+      >
+      > [link](https://stackoverflow.com/q/48171855/14092446)
+      >
+      > Besides from its availablity, IDK if there are any other differences.
+      >
+      > The above question's ac sucks.
+
+8. Performance impact of synchronous `write(2)`
+
+   See `2` for basic information. 
+
+   Flags about synchronous I/O:
+
+   1. O_SYNC: make subsequent writes reach `synchronized I/O file integrity 
+      completion`
+
+   2. O_DSYNC: make subsequet writes reach `synchronized I/O data integrity
+      completion`
+
+   3. O_RSYNC: According to the standard, when used with `O_SYNC`, make subsequent
+      reads reach `synchronized I/O file integrity completion`; When used with 
+      `O_DSYNC`, make subsequent reads reach `synchronized I/O data integrity 
+      completion.` Linux does not support this flag, in current implementaion,
+      it is just an alias to `O_SYNC`.
+
+   > O_FSYNC: IDK what does this flag mean, currently just an alias to O_SYNC 
+   > under Linux (kernel 5.19.8).
+
+
+9. Summary of buffering
+  
+   ![diagram](https://github.com/SteveLauC/pic/blob/main/photo_2022-09-14_11-30-29.jpg)
+
+   ![article: ensuring data reaches disk](https://lwn.net/Articles/457667/)
+
+10. Direct I/O: bypassing the kernel buffer cache
+
+    This can be enabled through the `O_DIRECT` flag of `open(2)` when opening a
+    file or through `fcntl(fd, F_SETFL, fcntl(fd, F_GETFL) | O_DIRECT)` for a
+    already open file.
+
+    And this is NOT supported by ALL Linux file systems (e.g., VFAT). To test 
+    whether it is supported on your system, you can simply try it.
+
+    ```c
+    #define _GNU_SOURCE
+    
+    #include <stdio.h>
+    #include <stdlib.h>
+    #include <errno.h>
+    #include <fcntl.h>
+    
+    int main(int ac, char *av[])
+    {
+            int res = open("new", O_CREAT | O_WRONLY | O_DIRECT, 0666);
+
+            if (res == -1 && errno == EINVAL) {
+                    // print file system name
+                    printf("Current file system: ");
+                    system("stat -f -c \"%T\" .");
+
+                    printf("O_DIRECT is NOT supported\n");
+            }
+    }
+    ```
+
+    If a file is opened with direct I/O by a process, then opened normally by
+    another process, then there is no coherency between the contents of the 
+    buffer cache and the data read or written via direct I/O. This should be
+    avoided.
+
+
+    Alignment restrictions for direct I/O:
+
+    > Because direct I/O involes direct accesses to disk, we must observe a 
+    > number of restrictions when performing I/O
+
+    1. the starting address of buffer being transferred must be **disk bocksize** aligned.
+    2. the offset of file or device must be **disk blocksize** aligned.
+    3. the length of buffer must be **disk blocksize** aligned.
+
+    Violation of these rules will result in a failure with errno value of `EINVAL`
+
+    > Under Linux 2.4, these alignment restrictions must be **file system** block
+    > size aligned, which is more restrictive.
+    >
+    > file system block size is typically bigger than the disk block size.
+    > 
+    > [patch email link](https://lwn.net/Articles/12032/)
