--- a/system/system-programming/the-linux-programming-interface/Ch13.md
+++ b/system/system-programming/the-linux-programming-interface/Ch13.md
@@ -10,6 +10,7 @@
 >    * how to enable it
 >    * how to test if your system supports it
 >    * alignment restrictions.
+> 7. mixing use of syscalls and lib functions (write order issue)
 
 1. kernel `buffer cache`
    
@@ -146,7 +147,7 @@
 4. libc buffering
 
    > This is exactly what we did in Note 3, using a bigger buffer to decrease
-   > the number of syscalls except this finished by the standard library 
+   > the number of syscalls except this is finished by the standard library 
    > developer.
 
    These are three types of buffering modes:
@@ -222,7 +223,7 @@
    If the stream argument is NULL, fflush() flushes *all* open output streams.
 
    If `stream` points to input stream associated with `seekable` files (not pipe
-   orr terminal), then the contents of buffer will be discarded.
+   or terminal), then the contents of buffer will be discarded.
 
    The buffer will be automatically flushed when the stream is closed.
 
@@ -352,7 +353,7 @@
   
    ![diagram](https://github.com/SteveLauC/pic/blob/main/photo_2022-09-14_11-30-29.jpg)
 
-   ![article: ensuring data reaches disk](https://lwn.net/Articles/457667/)
+   [article: ensuring data reaches disk](https://lwn.net/Articles/457667/)
 
 10. Direct I/O: bypassing the kernel buffer cache
 
@@ -386,9 +387,9 @@
     ```
 
     If a file is opened with direct I/O by a process, then opened normally by
-    another process, then there is no coherency between the contents of the 
-    buffer cache and the data read or written via direct I/O. This should be
-    avoided.
+    another process, then there is **no coherency** between the contents of the 
+    buffer cache and the data read or written via direct I/O. **This should be
+    avoided.**
 
 
     Alignment restrictions for direct I/O:
@@ -408,3 +409,51 @@
     > file system block size is typically bigger than the disk block size.
     > 
     > [patch email link](https://lwn.net/Articles/12032/)
+
+    > On Btrfs, Direct I/O will fall back to Buffered I/O if alignment restrictions
+    > are not satisfied. See [post](https://www.spinics.net/lists/linux-btrfs/msg67293.html)
+
+11. mixing lib functions and syscalls for File I/O
+
+    syscalls and library functions can be used together, but you should keep 
+    buffer issue in mind. NOTE: these is NO coherency issue, just that the 
+    write order may be counterintuitive.
+
+    ```c
+    #include <stdio.h>
+    #include <unistd.h>
+    
+    int main(void)
+    {
+            printf("hello world ");
+            write(1, "HELLO ", 6);
+    }
+    ```
+
+    For example, the above program will print `HELLO ` first, then print 
+    `hello world ` when the process terminates (stdout is closed and the buffer
+    will be flushed at that time).
+
+    ```shell
+    $ gccs main.c
+    
+    $ ./a.out
+    HELLO hello world %
+    ```
+
+    If you wanna `hello world ` to be printed fist, you can manually flush the
+    buffer, add a newline to do this since stdout is line-buffered or disable 
+    the buffering through `setbuf(stream, NULL)`
+
+12. convert between `FILE *` and `fd`
+    
+    ```c
+    #include <stdio.h>
+
+    int fileno(FILE *stream);
+    FILE * fdopen(int fd, const char *mode); // mode should be consistent with the flag of `fd`
+    ```
+
+    `fdopen(3)` is super useful in the cases where you need to create a socket 
+    and do buffered I/O on it since you just have `int socket()` rather than
+    `FILE * socket()`.
