--- a/system/system-programming/the-linux-programming-interface/Ch13.md
+++ b/system/system-programming/the-linux-programming-interface/Ch13.md
@@ -57,6 +57,15 @@
 
    > [Ch4 Note 5 flag arguments of open(2)](https://github.com/SteveLauC/Notes/blob/main/system/system-programming/the-linux-programming-interface/Ch4.md)
 
+   Another approach to make I/O synchronous is to modify the configuration of
+   the underlying file system:
+   
+   ```c
+   // alter the config for file system specified in `device`
+
+   mount(device, target, fs-type, MS_REMOUNT|MS_SYNCHRONOUS, data);
+   ```
+
 3. impact of `buffer size` on the performance of I/O 
 
    `buffer cache` is used to decrease the amount of `disk I/O`, but in our source 
