--- a/system/system-programming/the-linux-programming-interface/Ch14.md
+++ b/system/system-programming/the-linux-programming-interface/Ch14.md
@@ -1,10 +1,14 @@
 #### Ch14: File Systems
 
-> 1. device speical file
-> 2. disk and partition
-> 3. file system
-> 4. I-node
-> 5. VFS
+> 1. concept: device speical file
+> 2. concept: disk and partition
+> 3. concept: file system in userspace (FUSE)
+> 4. concept: file system and its components
+> 5. concept: I-node
+> 6. concept: VFS (an abstraction layer)
+> 7. the advantage of journaling file systems: consistency check
+> 8. list all the mount points
+> 9. `mount(2)` and `unmount(2)` syscall
 
 1. what is `device special file`
   
@@ -155,8 +159,8 @@
    2. UID
    3. GID
    4. Access Permission
-   5. Timestamps: access time (last read), change time (last write to metadata), 
-      modification time (last write to file contents)
+   5. Timestamps: access time (last read, atime), change time (last write to 
+      metadata, ctime), modification time (last write to file contents, mtime)
    6. Number of hard links
    7. Size of the file in bytes
    8. Number of allocated blocks (block size = 512 bytes)
@@ -180,3 +184,184 @@
    3. File can reside on the disk incontiguously.
    4. Data can be randomly accessed through `lseek(2)` (just calculate which 
       pointer to follow)
+
+8. Virtual File System (VFS) (or Virtual File Switch)
+
+   Different file systems differ in its detailed implementations, VFS is an 
+   abstraction layer to hide such differences.
+
+   ![diagram](https://github.com/SteveLauC/pic/blob/main/photo_2022-09-23_09-26-20.jpg)
+
+   This is actually a collection of APIs, such as:
+   `open/read/write/mount/lseek/close/truncate/stat/unmount/mmap/mkdir/link/unlink`, etc.
+
+   > Some file system may not support all the APIs requested by VFS (e.g., 
+   > Microsoft VFAT does not support symbolic links). In this case, then
+   > underlying file system will return an error to VFS, and VFS will transfer
+   > this to the Application.
+
+9. The advantage of journaling file systems
+
+   Normally, a consistency check is performed on reboot in order to ensure
+   the integrity of the file system. This should be done because, at the 
+   time of the system crash, a file update may be partially completed.
+
+   Such a consistency check needs to check the whole file system, which is
+   extermely time-consuming for traditional UNIX file systems (e.g, ext2).
+
+   But this task is super easy for journaling file system as a **log** will be
+   performed **before** the time of updating. Due to the log, a consistency 
+   check can be easily executed by checking logs.
+
+10. list all the mount points 
+    
+    1. using `mount(8)`
+
+       ```shell
+       $ mount
+       /dev/sda6 on / type ext4(rw)
+       proc on /proc type proc (rw,nosuid,nodev,noexec,relatime)
+       sysfs on /sys type sysfs (rw,nosuid,nodev,noexec,relatime,seclabel)
+       devtmpfs on /dev type devtmpfs (rw,nosuid,seclabel,size=4096k,nr_inodes=1048576,mode=755,inode64)
+       securityfs on /sys/kernel/security type securityfs (rw,nosuid,nodev,noexec,relatime)
+       tmpfs on /dev/shm type tmpfs (rw,nosuid,nodev,seclabel,inode64)
+       devpts on /dev/pts type devpts (rw,nosuid,noexec,relatime,seclabel,gid=5,mode=620,ptmxmode=000)
+       tmpfs on /run type tmpfs (rw,nosuid,nodev,seclabel,size=3151336k,nr_inodes=819200,mode=755,inode64)
+       ...
+       ```
+
+    2. read from the Linux-specific file `/proc/mounts`
+
+       ```shell
+       $ ls /proc/mounts
+       Permissions Links Size User Group Date Modified Name
+       lrwxrwxrwx@     1   11 root root  23 Sep 07:12  /proc/mounts -> self/mounts
+
+       $ cat /proc/mounts
+       proc /proc proc rw,nosuid,nodev,noexec,relatime 0 0
+       sysfs /sys sysfs rw,seclabel,nosuid,nodev,noexec,relatime 0 0
+       devtmpfs /dev devtmpfs rw,seclabel,nosuid,size=4096k,nr_inodes=1048576,mode=755,inode64 0 0
+       securityfs /sys/kernel/security securityfs rw,nosuid,nodev,noexec,relatime 0 0
+       tmpfs /dev/shm tmpfs rw,seclabel,nosuid,nodev,inode64 0 0
+       devpts /dev/pts devpts rw,seclabel,nosuid,noexec,relatime,gid=5,mode=620,ptmxmode=000 0 0
+       tmpfs /run tmpfs rw,seclabel,nosuid,nodev,size=3151336k,nr_inodes=819200,mode=755,inode64 0 0
+       ...
+       ```
+
+       > The reason why `/proc/mounts` is a soft link is that Linux introduces
+       > [per-process mount namespace](https://man7.org/linux/man-pages/man7/mount_namespaces.7.html)
+
+       > For the file format, see note 12.
+
+    3. read from `/etc/mtab`
+
+       This file is maintained by `mount(8)` and `unmount(8)` and silimar to 
+       `/proc/mounts` but more detailed.
+
+       ```shell
+       $ cat /etc/mtab
+       proc /proc proc rw,nosuid,nodev,noexec,relatime 0 0
+       sysfs /sys sysfs rw,seclabel,nosuid,nodev,noexec,relatime 0 0
+       devtmpfs /dev devtmpfs rw,seclabel,nosuid,size=4096k,nr_inodes=1048576,mode=755,inode64 0 0
+       securityfs /sys/kernel/security securityfs rw,nosuid,nodev,noexec,relatime 0 0
+       tmpfs /dev/shm tmpfs rw,seclabel,nosuid,nodev,inode64 0 0
+       devpts /dev/pts devpts rw,seclabel,nosuid,noexec,relatime,gid=5,mode=620,ptmxmode=000 0 0
+       tmpfs /run tmpfs rw,seclabel,nosuid,nodev,size=3151336k,nr_inodes=819200,mode=755,inode64 0 0
+       ...
+       ```
+
+       > NOTE: `mount(2)` and `unmount(2)` will not edit this file so it may be
+       > inaccurate if the caller forget to update it.
+
+       > For the file format, see note 12.
+
+11. `/etc/fstab`
+  
+    This file contains all the descriptions of  available file systems on a system.
+    It should be edited manually by the system administrator. `mount(8)`, `unmount(8)`
+    and `fsck(8)` relies on it.
+
+    ```shell
+    $ cat /etc/fstab
+    #
+    # /etc/fstab
+    # Created by anaconda on Wed Aug 24 18:04:46 2022
+    #
+    # Accessible filesystems, by reference, are maintained under '/dev/disk/'.
+    # See man pages fstab(5), findfs(8), mount(8) and/or blkid(8) for more info.
+    #
+    # After editing this file, run 'systemctl daemon-reload' to update systemd
+    # units generated from this file.
+    #
+    UUID=6d21f1be-9640-4f47-8d22-847269e24fc6 /                       btrfs   subvol=root,compress=zstd:1 0 0
+    UUID=6aa0611f-8869-468e-acf4-acf0dfd66d1f /boot                   ext4    defaults        1 2
+    UUID=0296-E38B          /boot/efi               vfat    umask=0077,shortname=winnt 0 2
+    UUID=6d21f1be-9640-4f47-8d22-847269e24fc6 /home                   btrfs   subvol=home,compress=zstd:1 0 0
+    ```
+
+    > functions like `getfsent(3)` and `getmntent(3)` can be used to sequencely
+    > scan `/etc/fstab`
+
+    > For the file format, see note 12.
+
+12. file format of `/proc/mount`, `/etc/mtab` and `/etc/fstab`
+
+    ```
+    /dev/sda9 /boot ext3 rw 0 0
+    ```
+
+    * device special file
+    * mount point
+    * file system type
+    * mount flags: `rw` in the above example indicates that the file system was 
+      mounted read-write.
+    * A number used to control the operation of file system backups by `dump(8)`.
+      This field and the next are used only by `/etc/fstab`. For `/proc/mounts`
+      and `/etc/mtab`, these fields are always `0`.
+    * A number used to control the order in which `fsck(8)` checks file systems
+      at boot.
+
+    For detailed format, see [man 5 fstab](https://man7.org/linux/man-pages/man5/fstab.5.html)
+
+13. mount a file system using `mount(2)`
+    
+    ```c
+    #include <sys/mount.h>
+
+    int mount(const char *source, const char *target,
+              const char *filesystemtype, unsigned long mountflags,
+              const void *data);
+    ```
+
+    Arguments: 
+    * source: device special file
+    * target: target directory
+    * filesystemtype: string representing a file-system type
+    * mountflags: mount option
+    * data: buffer whose contents will be interpreted by the underlying file system.
+
+    Some Mount flags: (For full information, see 
+    [man 2 mount](https://man7.org/linux/man-pages/man2/mount.2.html) and TLPI 
+    page: 264-267)
+
+    * MS_BIND: Create a bind mount. If this flag is present, `fstype`, `mountflags`
+      and `data` are ignored.
+
+      > [what is bind mount](https://unix.stackexchange.com/q/198590/498440)
+
+    * MS_DIRSYNC: make directory updates synchronous. Similar to `O_SYNC` of 
+      `open(2)` but just for direcoties.
+   
+    * MS_SYNCHRONOUS: make data and directory modifications synchronous.
+
+    * MS_NOATIME: don't update atime in this file system.
+      
+      > This can improve the performance significantly in some applications.
+
+    * MS_NOEXEC: don't allow binaries or scripts to be executed from this file
+      system.
+
+    * MS_NOSUID: Disable set-UID and set-GID programs in this fs.
+      > Useful if you don't trust the contents of an external disk.
+
+    * MS_RDONLY: mount the file system read-only.
