--- a/system/system-programming/the-linux-programming-interface/Ch14.md
+++ b/system/system-programming/the-linux-programming-interface/Ch14.md
@@ -3,13 +3,20 @@
 > 1. concept: device speical file
 > 2. concept: disk and partition
 > 3. concept: file system in userspace (FUSE)
-> 4. concept: file system and its components
-> 5. concept: I-node
+> 4. concept: file system and its components (bootblock/superblock/inode/datablock)
+> 5. concept: I-node (storing metadata and ptrs to data block)
 > 6. concept: VFS (an abstraction layer)
 > 7. the advantage of journaling file systems: consistency check
-> 8. list all the mount points
-> 9. `mount(2)` and `unmount(2)` syscall
-
+> 8. list all the mount points: `mount(8)`, `/etc/mounts`, `/etc/mtab`, `/etc/fstab`
+> 9. `mount(2)` and `unmount(2)/umount2(2)` syscalls
+> 10. advanced mount features
+>     1. mount the same file system at multiple locations
+>     2. stack multiple file systems at the same mount point
+>     3. per-mount `mount(2)` flags
+>     4. bind mounts (created using `mount(2)` `MS_BIND` flag)
+>     5. recursive bind mounts
+> 11. relationship between `fs` and `mp`
+   
 1. what is `device special file`
   
    Just a file representing a real or virtual device. For each device, there are 
@@ -348,6 +355,8 @@
       and `data` are ignored.
 
       > [what is bind mount](https://unix.stackexchange.com/q/198590/498440)
+      >
+      > Or see `note 15 4`
 
     * MS_DIRSYNC: make directory updates synchronous. Similar to `O_SYNC` of 
       `open(2)` but just for direcoties.
@@ -365,3 +374,282 @@
       > Useful if you don't trust the contents of an external disk.
 
     * MS_RDONLY: mount the file system read-only.
+
+14. unmount a fs using `umount(2)/umount2(2)`
+    
+
+    ```c
+    #include <sys/mount.h>
+
+    int umount2(const char *target, int flags);
+
+    // `umount()` is `umount2()` with empty `flags`
+    int umount(const char *target);
+    ```
+
+    > Before kernel 2.2, the `target` argument can be either the `device special 
+    > file` or the `mount point`. Since single file system can be mounted at 
+    > multiple locations, this flexibility has been not allowed since kernel 2.4.
+    > For the info about this feature, see `note 15 1`
+
+
+    > And it's impossible to `unmount` a busy file system (i.e., if there are
+    > open files on this fs, call `umount(2)` will yeild `EBUSY`)
+
+
+    Availables `flags` to `umount(2)`:
+    
+    * MNT_DETACH: Performs a lazy unmount. Mark this file system unavailable to
+      new processes. For processes that are currently using this fs, does nothing.
+      And the fs will be unmounted after these processes are terminated.
+
+    * MNT_EXPIRE: Mark the mount as expired.  If a mount is not currently in use, 
+      then an initial call to umount2() with this flag fails with the error EAGAIN, 
+      but marks the mount as `expired`. The mount remains `expired` as long as it 
+      isn't accessed by any process.  A second umount2() call specifying MNT_EXPIRE
+      unmounts an expired mount. This flag cannot be specified with either MNT_FORCE
+      or MNT_DETACH. **This provides a mechanism to unmount a file system that
+      hasn't been used for some period of time.**
+
+      > So the typical usage of this flag would be: 
+      >
+      > 1. call `umount2("mount_point", MNT_EXPIRE)`, you get `EAGAIN`, and this
+      >    fs is marked as `expired`.
+      > 2. after a period a time, call `umount2("mount_point", MNT_EXPIRE)` again.
+      >    If no operation performed on this fs in this period of time, so the
+      >    fs remains `expired`, then this fs will be unmounted.
+
+    * MNT_FORCE: forcefully unmount this file system, supported on only few file
+      systems, see man page (man 2 umount).
+
+    * UNMOUNT_NOFOLLOW: don't dereference if `target` is a soft link. This is 
+      needed to prevent symlink attacks in unprivileged unmounts
+
+
+15. some advanced `mount` features
+    
+    1. mount the same file system at multiple locations
+       
+       And changes made to one location will also be visible to other places.
+
+       Demo:
+
+       ```shell
+       $ mount |grep /dev/sda3
+       /dev/sda3 on /run/media/steve/writable type ext4 (rw,nosuid,nodev,relatime,seclabel,errors=remount-ro,uhelper=udisks2)
+
+       $ mkdir test
+       $ sudo mount /dev/sda3 test
+       /dev/sda3 on /run/media/steve/writable type ext4 (rw,nosuid,nodev,relatime,seclabel,errors=remount-ro,uhelper=udisks2)
+       /dev/sda3 on ./test type ext4 (rw,relatime,seclabel,errors=remount-ro) # precise path is omitted.
+
+       $ cd test
+       $ touch file
+       $ l
+       .rw-r--r--@     1    0 root root  25 Sep 11:13  file
+
+       $ l /run/media/steve/writable 
+       .rw-r--r--@     1    0 root root  25 Sep 11:13  file
+       ```
+
+    2. stack multiple file systems at the same mount point
+       
+       > Before kernel 2.4, a mount point can be used only once. Since 2.4, Linux
+       > allows multiple mounts to be stacked on a single mount point.
+
+       ```shell
+       $ sudo mount /dev/sda3 test # first fs at `test`
+       
+       $ l test
+       Permissions Links Size User Group Date Modified Name
+       .rw-r--r--@     1    0 root root  25 Sep 11:13  file
+       drwx------      2    - root root  25 Aug 19:54  lost+found
+       
+       $ sudo mount /dev/sda1 test # second fs at `test`
+       
+       # files are OVERWRITTEN
+
+       $ l test
+       Permissions Links Size User  Group Date Modified Name
+       dr-xr-xr-x@     1    - steve steve 11 Aug 14:03  boot
+       lr-xr-xr-x@     1   41 steve steve 11 Aug 14:03  casper -> casper_pop-os_22.04_amd64_intel_debug_178
+       dr-xr-xr-x@     1    - steve steve 11 Aug 14:03  casper_pop-os_22.04_amd64_intel_debug_178
+       dr-xr-xr-x@     1    - steve steve 11 Aug 14:03  dists
+       dr-xr-xr-x@     1    - steve steve 11 Aug 14:03  efi
+       dr-xr-xr-x@     1    - steve steve 11 Aug 14:03  isolinux
+       .r--r--r--@     1  43k steve steve 11 Aug 14:03  md5sum.txt
+       dr-xr-xr-x@     1    - steve steve 11 Aug 14:03  pool
+
+
+       $ sudo umount test
+       [sudo] password for steve:
+       
+       $ l test
+       Permissions Links Size User Group Date Modified Name
+       .rw-r--r--@     1    0 root root  25 Sep 11:13  file
+       drwx------      2    - root root  25 Aug 19:54  lost+found
+       ```
+
+       ![diagram](https://github.com/SteveLauC/pic/blob/main/Screenshot%20from%202022-09-25%2011-42-21.png)
+
+       Combined with `unmount2("point", MNT_DETACH)`, this can provide a smooth
+       migration off a file system.
+
+       
+    3. per-mount `mount(2)` flags
+
+       Since a file system can be mounted at multiple mount points, there are some
+       flags that only apply to that `mount point`. (i.e., if you mount `D` at `dir1`
+       with `flag F`, and mount `D` at `dir2`, then the `flag F` will only be 
+       available to `dir1`).
+
+       These flags are:
+
+       * MS_NOATIME
+       * MS_NODEV
+       * MS_NODIRATIME
+       * MS_NOEXEC
+       * MS_NOSUID
+       * MS_RONLY
+       * MS_REALTIME
+
+       Demo (with `MS_NOEXEC` flag):
+       
+       ```shell
+       $ sudo mount -o noexec /dev/sda3 dir1
+       
+       $ sudo mount /dev/sda3 dir2
+       
+       $ tree
+       .
+       ├── dir1
+       │   ├── file
+       │   └── lost+found  [error opening dir]
+       └── dir2
+           ├── file
+           └── lost+found  [error opening dir]
+       
+       5 directories, 7 files
+       
+       $ vim dir1/exec
+       $ chmod +x dir1/exec
+       $ cat dir1/exec
+       
+       #!/usr/bin/env bash
+       
+       echo "hello world";
+       
+       $ cd dir1 
+       $ ./exec
+       zsh: permission denied: ./exec
+       $ sudo ./exec
+       sudo: unable to execute ./exec: Permission denied
+       
+       $ cd ../dir2
+       $ ./exec
+       hello world # can be executed in `dir2`
+       ```
+
+   4. bind mounts (created using `mount(2)` `MS_BIND` flag)
+
+      What bind mount does is to mount a dir or file that has been already in your
+      file hierarchy to a new place. It is kinda similar to `hard link` but different
+      in:
+
+      1. bind mount can be performed across different file systems. (hard link can not
+         as it relies on `i-node`, which is unique in a file system.)
+
+      2. bind mount can be applied to directories. (hard link can not because it
+         will break the file system in multiple ways:
+         [Why are hard links not allowed for directories](https://askubuntu.com/q/210741/1417245)
+         [Why are hard links to directories not allowed in UNIX/Linux?](https://unix.stackexchange.com/q/22394/498440)
+         )
+
+      Bind mount is slightly different from other features as the `source` argument
+      of `mount(2)` is a `directory or regular file` rather than a `device special
+      file`.
+
+      A typical useage of `bind mount` is [`chroot jails`](https://unix.stackexchange.com/q/105/498440)
+
+      Demo for directory source:
+      
+      ```shell
+      $ touch dir1/file
+      
+      $ l dir2
+      
+      $ sudo mount --bind dir1 dir2
+      
+      $ l dir2
+      Permissions Links Size User  Group Date Modified Name
+      .rw-r--r--@     1    0 steve steve 25 Sep 14:48  file
+      
+      $ touch dir2/file2
+      
+      $ l dir1
+      Permissions Links Size User  Group Date Modified Name
+      .rw-r--r--@     1    0 steve steve 25 Sep 14:48  file
+      .rw-r--r--@     1    0 steve steve 25 Sep 14:50  file2
+      ```
+
+      Demo for file source:
+
+      ```shell
+      $ cat > f1
+      hence is powerful
+      
+      $ cat f1
+      hence is powerful
+      
+      $ l
+      Permissions Links Size User  Group Date Modified Name
+      .rw-r--r--@     1   18 steve steve 25 Sep 15:14  f1
+      
+      $ touch f2
+      
+      $ sudo mount --bind f1 f2
+      
+      $ mount | grep f2
+      /dev/nvme0n1p3 on ./f2 type btrfs (rw,relatime,seclabel,compress=zstd:1,ssd,space_cache=v2,subvolid=256,subvol=/home)
+      
+      $ l
+      Permissions Links Size User  Group Date Modified Name
+      .rw-r--r--@     1   18 steve steve 25 Sep 15:14  f1
+      .rw-r--r--@     1   18 steve steve 25 Sep 15:14  f2
+      
+      $ cat f2
+      hence is powerful
+      
+      $ cat >> f2 # append to f2
+      new contents
+      
+      $ cat f2
+      hence is powerful
+      new contents
+      
+      $ cat f1
+      hence is powerful
+      new contents
+      
+      $ rm f2
+      rm: cannot remove 'f2': Device or resource busy
+      
+      $ sudo umount f2
+      
+      $ rm f2
+      
+      $
+      ```
+    5. recursive bind mounts
+       
+       By default, if you have `bind mount`ed a directory and wanna perform 
+       `bind mount` again under that directory, this is not allowed.
+
+       Linux 2.4.11 added a flag `MS_REC` which could be used in conjunction
+       (ORed) with `MS_BIND` to make that work. This is referred as `recursive
+       bind mount`.
+      
+
+16. relationship between `file system` and `mount point`
+   
+    ![diagram](https://github.com/SteveLauC/pic/blob/main/Screenshot%20from%202022-09-25%2011-54-27.png)
