--- a/system/system-programming/the-linux-programming-interface/Ch14.md
+++ b/system/system-programming/the-linux-programming-interface/Ch14.md
@@ -16,6 +16,9 @@
 >     4. bind mounts (created using `mount(2)` `MS_BIND` flag)
 >     5. recursive bind mounts
 > 11. relationship between `fs` and `mp`
+> 12. tmpfs: a virtual memory file system
+> 13. obtain file system info using `statvfs(3)/fstatvfs(3)`
+> 14. OS-specific syscalls `statfs/fstatfs`
    
 1. what is `device special file`
   
@@ -321,7 +324,7 @@
     * mount point
     * file system type
     * mount flags: `rw` in the above example indicates that the file system was 
-      mounted read-write.
+      mounted read-write. (see note 13)
     * A number used to control the operation of file system backups by `dump(8)`.
       This field and the next are used only by `/etc/fstab`. For `/proc/mounts`
       and `/etc/mtab`, these fields are always `0`.
@@ -653,3 +656,111 @@
 16. relationship between `file system` and `mount point`
    
     ![diagram](https://github.com/SteveLauC/pic/blob/main/Screenshot%20from%202022-09-25%2011-54-27.png)
+
+
+17. tmpfs: a virtual memory file system
+
+    All the file systems we have seen are disk-based. But we also have file 
+    systems reside in memory (e.g., tmpfs)
+
+    tmpfs is a `virtual memory` file system, which means it not only uses 
+    memory, but also uses the swap partition.
+
+    To create a tmpfs:
+
+    > Note that you don't need to create a file system using `fdisk` first,
+    > because the kernel will do this for you.
+
+    ```shell
+    $ mkdir mount_point
+    # the `source` can be any name, it does not matter
+    $ sudo mount -t tmpfs source mount_point
+    $ cd mount_point
+    $ echo "hello tmpfs" > hello
+    $ cat hello
+    hello tmpfs
+
+    $ mount | grep source
+    source on /home/steve/Desktop/point type tmpfs (rw,relatime,seclabel,inode64)
+
+
+    $ cd ../
+    $ sudo umount mount_point # all data is lost.
+    $ rmdir mount_point
+    ```
+
+    A usage of `tmpfs` is to improve the performance of some applications, for 
+    example, if an app uses `/tmp` frequently, we can stack a tmpfs on it to 
+    improve the performance.
+
+    Aside from the user app usage, `tmpfs` also servers two special purposes:
+    1. impl System V shared memory insdie the kernel
+    2. a tmpfs fs mounted at `/dev/shm` or `/run/shm` is used for the glibc
+       implementation of POSIX shared memory and POSIX semaphores.
+
+       ```shell
+       $ mount|grep /dev/shm
+       tmpfs on /dev/shm type tmpfs (rw,nosuid,nodev,seclabel,inode64)
+       ```
+
+18. obtain file system info using `statvfs(3)/fstatfs(3)`
+
+    ```c
+    #include <sys/statvfs.h>
+
+    int statvfs(const char *restrict path, struct statvfs *restrict buf);
+    int fstatvfs(int fd, struct statvfs *buf);
+    ```
+
+    `path` can be any file path inside the target file system and `fd` is a
+    file descriptor referring to any file in that fs.
+
+    ```c
+    struct statvfs {
+        unsigned long  f_bsize;    /* Filesystem block size */
+        unsigned long  f_frsize;   /* Fragment size */
+        // `f_frsize` and `f_bsize` will have the same value 
+	// under most Linux file systems.
+	// [What do f_bsize and f_frsize in struct statvfs stand for](https://stackoverflow.com/q/54823541/14092446)
+
+        fsblkcnt_t     f_blocks;   /* Size of fs in f_frsize units */
+        fsblkcnt_t     f_bfree;    /* Number of free blocks */
+        fsblkcnt_t     f_bavail;   /* Number of free blocks for
+			             unprivileged users */
+        // Some systems allow root-reserverd space, in such cases, `f_bfree`
+	// will be different from `f_bavail`
+
+        fsfilcnt_t     f_files;    /* Number of inodes */
+        fsfilcnt_t     f_ffree;    /* Number of free inodes */
+        fsfilcnt_t     f_favail;   /* Number of free inodes for
+			             unprivileged users */
+
+        unsigned long  f_fsid;     /* Filesystem ID */
+        unsigned long  f_flag;     /* Mount flags */
+	// `f_flag` is the same as the `mountflag` argument of `mount(2)` except that
+	// those constants are started with `ST_` rather than `MS_`
+
+        unsigned long  f_namemax;  /* Maximum filename length */
+    };
+    ```
+
+    > `fsblkcnt_t` and `fsfilcnt_t` types are integer types specified by SUSv3
+    >
+    > ```rust
+    >
+    > // GNU/Linux amd64
+    > pub type fsblkcnt_t = u64;
+    > pub type fsfilcnt_t = u64;
+    > ```
+
+19. `statfs(2)/fstatfs(2)`
+
+    > On Linux, `statvfs(3)/fstatvfs(3)` are based on `statfs/fstatfs`. 
+    > On some UNIX implementations, `statfs/fstatfs` are provided and
+    > `statvfs/fstatvfs` are not.
+
+    `statfs` is OS-specific, and `statvfs` is POSIX-conforming.
+
+    [Difference between statvfs() and statfs() system calls](https://stackoverflow.com/q/1653163/14092446)
+
+
